k8s-deployment-masterclass/03-canary-argo/rollout.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-app-rollout
  namespace: canary
spec:
  replicas: 4
  strategy:
    canary:
      stableService: app-stable-service
      canaryService: app-canary-service
      steps:
        - setWeight: 25
        - pause: {duration: 20s}
        - setWeight: 50
        - pause: {}  # 50% var permanent pause hoil, mhanje donhi version live distil!
  selector:
    matchLabels:
      app: canary-app
  template:
    metadata:
      labels:
        app: canary-app
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0.0
          imagePullPolicy: IfNotPresent
          args:
            - "-text=Version: v1.0.0 (stable)"
          ports:
            - containerPort: 5678
