k8s-deployment-masterclass/03-canary-argo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stable-service
  namespace: deployment-lab
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app-canary-service
  namespace: deployment-lab
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
