k8s-deployment-masterclass/03-canary-argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-app-ingress
  namespace: canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-stable-service
                port:
                  number: 80
